--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,5 @@ jobs:
       - checkout
       - run: pip install -r requirements.txt
       - run: pytest
-      - store_test_results
+      - store_test_results:
         path: test-reports/
